Initial react & redux boilerplate set-up

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "nodemon server.js"
   },
   "author": "Paul Brady",
   "license": "ISC",
