--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "dev-link",
   "version": "1.0.0",
-  "description": "Dev Link",
+  "description": "Link up with like-minded developers",
   "main": "index.js",
   "scripts": {
     "start": "npm-run-all --parallel start:client start:server",
     "start:client": "cd ./client && yarn start",
-    "start:server": "cd ./server && yarn start",
-    "deps": "npm-run-all install:client install:server",
+    "start:server": "cd ./server && yarn server",
+    "install:all": "yarn && npm-run-all install:client install:server",
     "install:client": "cd ./client && yarn install",
     "install:server": "cd ./server && yarn install"
   },
@@ -23,5 +23,9 @@
   "homepage": "https://github.com/bradypp/dev-link#readme",
   "devDependencies": {
     "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "node-sass": "^4.13.1",
+    "react-redux": "^7.2.0"
   }
 }
