--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
-    "react-redux": "^7.2.0"
+    "react-moment": "^0.9.7",
+    "react-redux": "^7.2.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
