--- a/server/package.json
+++ b/server/package.json
@@ -15,18 +15,19 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "validator": "^12.2.0"
+    "passport-jwt": "^4.0.0"
   },
   "engines": {
     "node": ">=12.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-node": "^4.0.0",
     "eslint-config-prettier": "^6.10.0",
