--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
+    "morgan": "^1.9.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
@@ -34,7 +36,6 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1"
   }
