--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "Paul Brady",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
+    "normalize-url": "^5.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
