--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
@@ -22,9 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
-    "normalize-url": "^5.0.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "normalize-url": "^5.0.0"
   },
   "engines": {
     "node": ">=12.0.0"
