--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.5",
     "normalize-url": "^5.0.0"
   },
   "engines": {
