--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.1",
     "express-validator": "^6.4.0",
     "gravatar": "^1.8.0",
+    "helmet": "^3.21.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
