--- a/server/package.json
+++ b/server/package.json
@@ -18,15 +18,18 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.1.1",
     "express-validator": "^6.4.0",
     "gravatar": "^1.8.0",
     "helmet": "^3.21.3",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.5",
-    "normalize-url": "^5.0.0"
+    "normalize-url": "^5.0.0",
+    "xss-clean": "^0.1.1"
   },
   "engines": {
     "node": ">=12.0.0"
