--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "color": "^3.1.2",
     "lodash.isempty": "^4.4.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
@@ -19,10 +20,10 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "styled-components": "^5.0.1",
     "uuid": "^7.0.2"
   },
   "scripts": {
