--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "color": "^3.1.2",
+    "formik": "^2.1.4",
     "lodash.isempty": "^4.4.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
