--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.19.2",
     "color": "^3.1.2",
     "formik": "^2.1.4",
-    "lodash.isempty": "^4.4.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
