--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
   "author": "Paul Brady",
   "license": "ISC",
   "dependencies": {
+    "all-the-cities": "^3.1.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "country-list": "^2.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
