--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
+    "react-image": "^2.4.0",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
