--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.12.1",
+    "quill": "^1.3.7",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
@@ -23,6 +24,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-textarea-autosize": "^7.1.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
