--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "quill": "^1.3.7",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-dropzone": "^11.0.1",
     "react-icons": "^3.9.0",
     "react-image": "^2.4.0",
     "react-redux": "^7.2.0",
