--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-error-boundary": "^2.2.1",
     "react-icons": "^3.9.0",
     "react-image": "^2.4.0",
+    "react-media": "^1.10.0",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.2.5",
     "react-router-dom": "^5.1.2",
