--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.0",
     "react-dropzone": "^11.0.1",
     "react-error-boundary": "^2.2.1",
+    "react-helmet": "^6.0.0",
     "react-icons": "^3.9.0",
     "react-image": "^2.4.0",
     "react-media": "^1.10.0",
