--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "install:all": "yarn && npm-run-all --parallel install:client install:server",
     "install:client": "cd ./client && yarn install",
     "install:server": "cd ./server && yarn install",
-    "heroku-postbuild": "cd client && yarn && yarn run build"
+    "heroku-postbuild": "cd ./client && yarn && yarn run build"
   },
   "repository": {
     "type": "git",
