--- a/client/package.json
+++ b/client/package.json
@@ -72,5 +72,6 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.5.0",
     "prettier": "^1.19.1"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
