--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@ NODE_ENV="development"
 PORT="5000"
 
 # Database config
-MONGO_URI="mongodb+srv://paul:<password>...
+MONGO_URI=mongodb+srv://name:<password>...
 DB_PASSWORD=<password>
 
 # Auth config
@@ -23,3 +23,8 @@ EMAIL_PORT=
 # SendGrid (prod)
 SENDGRID_USERNAME=
 SENDGRID_PASSWORD=
+
+
+# AWS S3
+AWS_ACCESS_KEY=
+AWS_SECRET_KEY=
