--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "all-the-cities": "^3.1.0",
+    "aws-sdk": "^2.686.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -43,10 +44,10 @@
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.5",
     "normalize-url": "^5.0.0",
     "pug": "^2.0.4",
-    "sharp": "^0.25.2",
     "xss-clean": "^0.1.1"
   },
   "engines": {
@@ -62,7 +63,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "nodemon": "^2.0.2",
-    "prettier": "^1.19.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1"
   }
 }
