--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "sharp": "^0.25.3",
     "styled-components": "^5.0.1",
     "uuid": "^7.0.3",
     "yup": "^0.28.4"
