--- a/.env.sample
+++ b/.env.sample
@@ -1,15 +1,15 @@
-# Base config
+# Base config (required)
 NODE_ENV="development"
 PORT="5000"
 
-# Database config
+# Database config (required)
 MONGO_URI=mongodb+srv://name:<password>...
 DB_PASSWORD=<password>
 
-# Auth config
-JWT_SECRET=
-JWT_EXPIRES_MINUTES=
-PASSWORD_RESET_EXPIRY_MINUTES=
+# Auth config (required)
+JWT_SECRET="secret"
+JWT_EXPIRES_MINUTES="360"
+PASSWORD_RESET_EXPIRY_MINUTES="10"
 
 # Email
 EMAIL_FROM=
@@ -24,6 +24,6 @@ EMAIL_PORT=
 SENDGRID_USERNAME=
 SENDGRID_PASSWORD=
 
-# AWS S3
+# AWS S3 (required for image upload)
 AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
