--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "start:all": "npm-run-all --parallel start:client start:server",
     "start:client": "cd ./client && yarn start",
     "start:server": "nodemon server.js",
-    "install:all": "yarn && npm-run-all --parallel install:client",
+    "install:all": "npm-run-all --parallel install:server install:client",
     "install:client": "cd ./client && yarn install",
     "install:server": "yarn install",
-    "heroku-postbuild": "cd ./client && yarn && yarn run build"
+    "heroku-postbuild": "cd ./client && yarn install && yarn run build"
   },
   "author": "Paul Brady",
   "license": "ISC",
